--- a/theme/_mixins.scss
+++ b/theme/_mixins.scss
@@ -3,19 +3,23 @@
   &::-webkit-scrollbar {
     width:  $size;
     height: $size;
+    border-radius: 5px;
   }
 
   &::-webkit-scrollbar-thumb {
     background: $foreground-color;
+    border-radius: 5px;
   }
 
   &::-webkit-scrollbar-track {
     background: $background-color;
+    border-radius: 5px;
   }
 
   // For Internet Explorer
   & {
     scrollbar-face-color: $foreground-color;
     scrollbar-track-color: $background-color;
+    border-radius: 5px;
   }
 }
