--- a/theme/smart-grid.scss
+++ b/theme/smart-grid.scss
@@ -2,6 +2,7 @@ $columns: 12;
 $atom: (100% / $columns);
 
 $break_lg: 1680px;
+$break_mdl: 1450px;
 $break_md: 1366px;
 $break_mdx: 1280px;
 $break_tablet: 1024px;
@@ -13,6 +14,7 @@ $break_iphone: 320px;
 
 $offset: 20px;
 $offset_lg: $offset;
+$offset_mdl: $offset;
 $offset_md: $offset;
 $offset_mdx: $offset;
 $offset_tablet: $offset;
@@ -24,6 +26,7 @@ $offset_iphone: $offset;
 
 $offset_one_side: ($offset / 2);
 $offset_lg_one_side: ($offset_lg / 2);
+$offset_mdl_one_side: ($offset_mdl / 2);
 $offset_md_one_side: ($offset_md / 2);
 $offset_mdx_one_side: ($offset_mdx / 2);
 $offset_tablet_one_side: ($offset_tablet / 2);
@@ -35,6 +38,7 @@ $offset_iphone_one_side: ($offset_iphone / 2);
 
 $fields: 20px;
 $fields_lg: 15px;
+$fields_mdl: 15px;
 $fields_md: 15px;
 $fields_mdx: 15px;
 $fields_tablet: 15px;
@@ -51,6 +55,11 @@ $fields_iphone: 10px;
     @include lg-block(){
         padding-left: $fields_lg;
         padding-right: $fields_lg;
+    }
+
+    @include mdl-block(){
+        padding-left: $fields_mdl;
+        padding-right: $fields_mdl;
     }
 
     @include md-block(){
@@ -155,6 +164,11 @@ $fields_iphone: 10px;
     @include lg(width, #{calc(#{$val} - #{$offset_lg})});
 }
 
+@mixin size-mdl($n){
+    $val: 100% / $columns * $n;
+    @include mdl(width, #{calc(#{$val} - #{$offset_mdl})});
+}
+
 @mixin size-md($n){
     $val: 100% / $columns * $n;
     @include md(width, #{calc(#{$val} - #{$offset_md})});
@@ -257,6 +271,38 @@ $fields_iphone: 10px;
 @mixin shift-lg-padding-right($n){
     $val: 100% / $columns * $n;
     @include lg(padding-right, #{calc(#{$val} + #{$offset_lg_one_side})});
+}
+
+@mixin shift-mdl($n){
+    $val: 100% / $columns * $n;
+    @include mdl(margin-left, #{calc(#{$val} + #{$offset_mdl_one_side})});
+    @include mdl(margin-right, #{calc(#{$val} + #{$offset_mdl_one_side})});
+}
+
+@mixin shift-mdl-left($n){
+    $val: 100% / $columns * $n;
+    @include mdl(margin-left, #{calc(#{$val} + #{$offset_mdl_one_side})});
+}
+
+@mixin shift-mdl-right($n){
+    $val: 100% / $columns * $n;
+    @include mdl(margin-right, #{calc(#{$val} + #{$offset_mdl_one_side})});
+}
+
+@mixin shift-mdl-padding($n){
+    $val: 100% / $columns * $n;
+    @include mdl(padding-left, #{calc(#{$val} + #{$offset_mdl_one_side})});
+    @include mdl(padding-right, #{calc(#{$val} + #{$offset_mdl_one_side})});
+}
+
+@mixin shift-mdl-padding-left($n){
+    $val: 100% / $columns * $n;
+    @include mdl(padding-left, #{calc(#{$val} + #{$offset_mdl_one_side})});
+}
+
+@mixin shift-mdl-padding-right($n){
+    $val: 100% / $columns * $n;
+    @include mdl(padding-right, #{calc(#{$val} + #{$offset_mdl_one_side})});
 }
 
 @mixin shift-md($n){
@@ -523,6 +569,18 @@ $fields_iphone: 10px;
 
 @mixin lg-block(){
     @media screen and (max-width: $break_lg){
+        @content;
+    }
+}
+
+@mixin mdl($name, $value){
+    @media screen and (max-width: $break_mdl){
+        #{$name}: $value;
+    }
+}
+
+@mixin mdl-block(){
+    @media screen and (max-width: $break_mdl){
         @content;
     }
 }
