--- a/theme/index.scss
+++ b/theme/index.scss
@@ -225,7 +225,6 @@ button {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-left: 32px;
   &::before {
     display: none;
     position: absolute;
@@ -247,8 +246,8 @@ button {
   }
   a {
     font-weight: 700;
-    color: $dark;
-    //font-size: 12px;
+    color: rgba($white, .54);
+    font-size: 15px;
     text-decoration: none;
     text-transform: uppercase;
     &.active {
@@ -260,25 +259,30 @@ button {
 // Menu Burger
 
 .menu__burger {
+  position: relative;
   top: 0;
   right: 0;
   z-index: 999;
   width: 40px;
   height: 40px;
   cursor: pointer;
-  position: absolute;
+  display: none;
+  //position: absolute;
   span {
     display: block;
     background: #fff;
     border-radius: 1px;
     will-change: transform;
   }
+  @include  mdl-block() {
+    display: inline-block;
+  }
 }
 .burger__close,
 .burger__open {
   top: 50%;
   left: 50%;
-  width: 2.222vw;
+  width: 100%;
   z-index: 2;
   overflow: hidden;
   position: absolute;
@@ -287,16 +291,18 @@ button {
 .burger__open {
   transform: translate(-50%, -50%);
   span {
-    height: 2px;
-    width: 50%;
+    height: 4px;
+    width: 24px;
     margin-left: auto;
     margin-right: auto;
     &:nth-child(2) {
       margin: 4px auto;
+      transform: translateX(6px);
     }
   }
 }
 .burger__close {
+  display: none;
   transform: translate(-50%, -50%) rotate(45deg);
   width: 1.667vw;
   height: 1.667vw;
@@ -321,6 +327,7 @@ button {
   top: 0;
   left: 0;
   z-index: 1;
+  display: none;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -418,38 +425,152 @@ button {
 }
 .accent {
   color: $accent;
+  &-link {
+    position: relative;
+    text-decoration: none;
+    font-weight: 700;
+    color: $accent;
+    font-size: 17px;
+    &::after {
+      position: absolute;
+      content: '';
+      bottom: -4px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $accent;
+    }
+  }
 }
 // Home page -- Header Section
 .main-header {
   min-height: 600px;
   height: 100vh;
+  &.dark {
+    .link-style {
+      color: $dark !important;
+    }
+    .hero-slider .swiper .swiper-slide{
+      color: $dark;
+    }
+    .logo {
+      svg {
+        path {
+          filL: $blue;
+        }
+      }
+    }
+    .language-switcher {
+      a {
+        color: rgba($dark, .54);
+        &.active {
+          color: $accent;
+        }
+      }
+    }
+    .hero-slider .swiper-pagination {
+      .swiper-pagination-bullet {
+        border: 2px solid rgba($dark, .24);
+      }
+      .swiper-pagination-bullet-active {
+        border: 4px solid $dark;
+        &::after {
+          background-color: $dark;
+        }
+      }
+    }
+  }
+  .link-style {
+    color: $white !important;
+    &--dark {
+      color: $dark !important;
+    }
+  }
+  .hero-slider .swiper .swiper-slide{
+    color: $white;
+  }
+  .logo {
+    svg {
+      path {
+        filL: $white;
+      }
+    }
+  }
+  .hero-slider .swiper-pagination {
+    .swiper-pagination-bullet {
+      border: 2px solid rgba($dark, .56);
+    }
+    .swiper-pagination-bullet-active {
+      border: 4px solid $white;
+      &::after {
+        background-color: $white;
+      }
+    }
+  }
 }
 .app-header {
-  position: fixed;
+  position: absolute;
   width: 100%;
+  top: 40px;
   z-index: 101;
-  padding: 40px;
+  padding: 24px 40px 24px 40px;
   transition: padding 0.25s ease, background-color 0.25s ease;
   .logo {
     margin-right: 54px;
   }
   &--scrolled {
+    position: fixed;
+    top: 0;
     padding: 18px 20px;
     background-color: #fff;
     transition: padding 0.25s ease, background-color 0.25s ease;
     border-bottom: 1px solid #d3d3d3;
+    .logo {
+      path {
+        filL: $blue !important;
+      }
+    }
+    .link-style {
+      color: $dark !important;
+    }
   }
 }
-.top-line {
+.top-bar {
+  position: absolute;
+  width: 100%;
+  z-index: 101;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 40px;
+}
+.top-line {
+  //display: flex;
+  &__content {
+    display: flex;
+  }
   &__left {
     display: flex;
     align-items: center;
   }
   &__right {
     display: flex;
+    align-items: center;
+    justify-content: flex-end;
     flex-basis: 400px;
     margin-left: auto;
+    a {
+      margin-right: 60px;
+      text-decoration: none;
+      @include mdl-block() {
+        display: none;
+      }
+    }
+    .v-btn {
+      @include  mdl-block() {
+        display: none;
+      }
+    }
   }
 }
 
@@ -462,11 +583,34 @@ button {
     }
   }
   a {
-    display: inline-block;
-    text-decoration: none;
-    font-weight: 900;
-    color: $dark;
+    position: relative;
+    &::before {
+      content: '';
+      position: absolute;
+      top: -32px;
+      width: 0;
+      height: 8px;
+      background-color: $blue;
+      transition: width .25s ease;
+    }
+    &.highlighted {
+      color: $blue !important;
+      &::before {
+        width: 100%;
+        transition: width .25s ease;
+      }
+    }
   }
+  @include mdl-block() {
+    display: none;
+  }
+}
+
+.link-style {
+  display: inline-block;
+  text-decoration: none;
+  font-weight: 900;
+  color: $dark;
 }
 
 .hero-slider {
@@ -496,6 +640,7 @@ button {
     /*left: 50%;*/
     /*top: 50%;*/
     .swiper-slide {
+      position: relative;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -507,12 +652,23 @@ button {
       color: $dark;
       &:nth-child(1) {
         background-image: url('~@/assets/images/slide-1.png');
+        &::after {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(#000, .16);
+        }
       }
       &:nth-child(2) {
-        background-color: #fec10d;
+        //background-color: #fec10d;
+        background-image: url('~@/assets/images/slide-2.png');
       }
       &:nth-child(3) {
-        background: linear-gradient(#ad72e3, #63acdc);
+        background-image: url('~@/assets/images/slide-3.png');
+        //background: linear-gradient(#ad72e3, #63acdc);
       }
     }
   }
@@ -600,6 +756,8 @@ body .swiper-button {
     height: 56px;
     border-radius: 50%;
     border: none;
+    outline: none;
+    transition: background-color .25s ease;
     &::after {
       font-family: 'Material Icons';
       -webkit-font-feature-settings: 'liga';
@@ -615,14 +773,18 @@ body .swiper-button {
     @include phonex-block() {
       display: none;
     }
+    &:hover {
+      background-color: $blue;
+      transition: background-color .25s ease;
+    }
   }
   &-prev {
-    border: 1px solid #c0c5c8;
-    background-color: $grey;
+    //border: 1px solid #c0c5c8;
+    background-color: $dark;
     left: 32px;
     &::after {
       content: 'arrow_back';
-      color: #879197;
+      color: #fff;
     }
     @include tabletx-block() {
       left: 16px;
@@ -642,8 +804,10 @@ body .swiper-button {
 }
 
 .slide-content {
+  position: relative;
+  z-index: 1;
   width: 100%;
-  max-width: 980px;
+  max-width: 100%;
   padding-left: 280px;
   @include lg-block() {
     padding-left: $slider-lg-gutter;
@@ -762,6 +926,13 @@ body .swiper-button {
     }
   }
   .study-proposals {
+    &-container {
+      display: flex;
+      flex-direction: column;
+      .v-btn {
+        align-self: flex-end;
+      }
+    }
     position: relative;
     z-index: 1;
     display: flex;
@@ -1526,13 +1697,14 @@ body .swiper-button {
   &-container {
     display: flex;
     align-items: center;
-    margin-top: 32px;
     label {
       color: #879197;
       display: inline-block;
       margin-right: 8px;
     }
     li {
+      display: flex;
+      align-items: center;
       margin-right: 15px;
       &:last-child {
         margin-right: 0;
