--- a/theme/index.scss
+++ b/theme/index.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'mixins';
 @import 'smart-grid';
+@import 'keyframes';
 *,
 *:before,
 *:after {
@@ -24,6 +25,16 @@ body {
   background-color: $grey;
   color: $dark;
   @include scrollbars(8px, $grey, $dark);
+}
+
+.default-left {
+  padding-left: 218px;
+  @include mdx-block() {
+    padding-left: 100px;
+  }
+  @include tabletx-block() {
+    padding-left: 40px;
+  }
 }
 
 @import 'components/app-modal';
@@ -215,6 +226,7 @@ button {
   border: none;
   outline: none;
   cursor: pointer;
+  background-color: transparent;
   &:focus {
     outline: none;
   }
@@ -246,7 +258,7 @@ button {
   }
   a {
     font-weight: 700;
-    color: rgba($white, .54);
+    color: rgba($white, 0.54);
     font-size: 15px;
     text-decoration: none;
     text-transform: uppercase;
@@ -274,7 +286,7 @@ button {
     border-radius: 1px;
     will-change: transform;
   }
-  @include  mdl-block() {
+  @include mdl-block() {
     display: inline-block;
   }
 }
@@ -450,19 +462,19 @@ button {
     .link-style {
       color: $dark !important;
     }
-    .hero-slider .swiper .swiper-slide{
+    .hero-slider .swiper .swiper-slide {
       color: $dark;
     }
     .logo {
       svg {
         path {
-          filL: $blue;
+          fill: $blue;
         }
       }
     }
     .language-switcher {
       a {
-        color: rgba($dark, .54);
+        color: rgba($dark, 0.54);
         &.active {
           color: $accent;
         }
@@ -470,7 +482,7 @@ button {
     }
     .hero-slider .swiper-pagination {
       .swiper-pagination-bullet {
-        border: 2px solid rgba($dark, .24);
+        border: 2px solid rgba($dark, 0.24);
       }
       .swiper-pagination-bullet-active {
         border: 4px solid $dark;
@@ -486,19 +498,19 @@ button {
       color: $dark !important;
     }
   }
-  .hero-slider .swiper .swiper-slide{
+  .hero-slider .swiper .swiper-slide {
     color: $white;
   }
   .logo {
     svg {
       path {
-        filL: $white;
+        fill: $white;
       }
     }
   }
   .hero-slider .swiper-pagination {
     .swiper-pagination-bullet {
-      border: 2px solid rgba($dark, .56);
+      border: 2px solid rgba($dark, 0.56);
     }
     .swiper-pagination-bullet-active {
       border: 4px solid $white;
@@ -527,7 +539,7 @@ button {
     border-bottom: 1px solid #d3d3d3;
     .logo {
       path {
-        filL: $blue !important;
+        fill: $blue !important;
       }
     }
     .link-style {
@@ -567,7 +579,7 @@ button {
       }
     }
     .v-btn {
-      @include  mdl-block() {
+      @include mdl-block() {
         display: none;
       }
     }
@@ -591,13 +603,13 @@ button {
       width: 0;
       height: 8px;
       background-color: $blue;
-      transition: width .25s ease;
+      transition: width 0.25s ease;
     }
     &.highlighted {
       color: $blue !important;
       &::before {
         width: 100%;
-        transition: width .25s ease;
+        transition: width 0.25s ease;
       }
     }
   }
@@ -659,7 +671,7 @@ button {
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: rgba(#000, .16);
+          background-color: rgba(#000, 0.16);
         }
       }
       &:nth-child(2) {
@@ -757,7 +769,7 @@ body .swiper-button {
     border-radius: 50%;
     border: none;
     outline: none;
-    transition: background-color .25s ease;
+    transition: background-color 0.25s ease;
     &::after {
       font-family: 'Material Icons';
       -webkit-font-feature-settings: 'liga';
@@ -775,7 +787,7 @@ body .swiper-button {
     }
     &:hover {
       background-color: $blue;
-      transition: background-color .25s ease;
+      transition: background-color 0.25s ease;
     }
   }
   &-prev {
@@ -871,6 +883,12 @@ body .swiper-button {
     color: $white;
   }
 }
+.section-subtitle {
+  font-size: 39px;
+  font-family: $header-font;
+  font-weight: 900;
+  color: $dark;
+}
 .test {
   font-family: 'OpenSansBold', sans-serif;
 }
@@ -881,7 +899,7 @@ body .swiper-button {
   margin: 135px auto 130px;
   background-repeat: no-repeat;
   background-position: bottom;
-  height: 688px;
+  min-height: 688px;
   @include md-block() {
     margin: 170px auto 130px;
   }
@@ -906,7 +924,6 @@ body .swiper-button {
     .section-title {
       padding-top: 20px;
       margin-right: 20px;
-      padding-left: 218px;
       flex: 0 0 40%;
       @include lg-block() {
         padding-left: 140px;
@@ -929,6 +946,7 @@ body .swiper-button {
     &-container {
       display: flex;
       flex-direction: column;
+      padding-right: 15px;
       .v-btn {
         align-self: flex-end;
       }
@@ -942,6 +960,7 @@ body .swiper-button {
     border-radius: 16px;
     padding: 0px;
     max-width: 820px;
+    margin-bottom: 56px;
     @include md-block() {
       max-width: 100%;
     }
@@ -1000,10 +1019,73 @@ body .swiper-button {
     @include md-block() {
       padding: 42px 46px 42px 46px;
     }
+    @include phonex-block() {
+      flex: 1 1 100%;
+    }
   }
   .study-text {
     color: #879197;
     margin-top: 24px;
+  }
+}
+.study-intro {
+  margin-top: 130px;
+  padding-right: 160px;
+  @include mdx-block() {
+    padding-right: 80px;
+  }
+  @include tabletx-block() {
+    padding-right: 40px;
+  }
+  &-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -80px;
+    margin-right: -80px;
+    @include mdx-block() {
+      margin-left: -40px;
+      margin-right: -40px;
+    }
+    @include tabletl-block() {
+      justify-content: center;
+      //grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  &-item {
+    text-align: center;
+    margin-left: 80px;
+    margin-right: 80px;
+    width: calc(33.3333333333% - 160px);
+
+    &:first-child {
+      text-align: left;
+    }
+    &:last-child {
+    }
+    @include mdx-block() {
+      margin-left: 40px;
+      margin-right: 40px;
+      width: calc(33.3333333333% - 80px);
+    }
+    @include tabletl-block() {
+      width: calc(50% - 80px);
+    }
+    @include phonex-block() {
+      width: calc(100% - 80px);
+      margin-bottom: 40px;
+      &:first-child {
+        text-align: center;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+  &__header {
+    margin-bottom: 16px;
+  }
+  &__text {
+    line-height: 24px;
   }
 }
 .reveal {
@@ -1042,7 +1124,7 @@ body .swiper-button {
 .online-school,
 .demo-access {
   padding-top: 130px;
-  padding-bottom: 110px;
+  padding-bottom: 275px;
 }
 .additional-opps {
   padding-top: 130px;
@@ -1083,19 +1165,59 @@ body .swiper-button {
     }
   }
   &__right {
+    position: relative;
     flex: 1 1 62%;
+    .play {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
     @include lg-block() {
       flex: 1 1 50%;
     }
   }
   p {
-    margin-bottom: 16px;
+    margin-bottom: 20px;
     &:last-child {
       margin-bottom: 0;
     }
   }
 }
-
+.play {
+  &-btn {
+    position: relative;
+    border: none;
+    cursor: pointer;
+    background-color: $accent;
+    display: inline-flex;
+    width: 100px;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    z-index: 10;
+  }
+  .pulse {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    &-1 {
+      width: 132px;
+      height: 132px;
+      border: 1px solid #ff7e3d7a;
+      animation: pulse 1s infinite;
+    }
+    &-2 {
+      width: 164px;
+      height: 164px;
+      border: 1px solid #ff7e3d3d;
+      animation: pulse 1s infinite;
+    }
+  }
+}
 // Demo Access
 
 .demo-access {
@@ -1185,7 +1307,7 @@ body .swiper-button {
 }
 
 .timeline {
-  flex: 1 0 440px;
+  flex: 0 0 440px;
   margin-right: 60px;
   &-icon {
     position: absolute;
@@ -1237,10 +1359,21 @@ body .swiper-button {
     flex: 1 1 auto;
   }
   &__info {
+    position: absolute;
+    width: 100%;
+    left: 0;
     padding: 56px 60px 24px 60px;
     border-radius: 24px;
     background-color: $blue;
     color: $white;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.45s ease;
+    &.active {
+      opacity: 1;
+      visibility: visible;
+      transition: opacity 0.45s ease;
+    }
     span {
       margin-right: 24px;
     }
@@ -1332,8 +1465,8 @@ body .swiper-button {
   }
 }
 
-// Enter School
-.timeline--enter-school {
+// Education Cost
+.timeline--education-cost {
   display: flex;
   position: relative;
   padding-top: 0px;
@@ -1381,6 +1514,16 @@ body .swiper-button {
     }
   }
 }
+.plan-price {
+  color: $blue;
+  font-size: 26px;
+  span {
+    font-weight: 900;
+  }
+  &--sm {
+    font-size: 24px;
+  }
+}
 .school-plans {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -1402,15 +1545,6 @@ body .swiper-button {
       text-align: center;
       font-size: 26px;
       margin-bottom: 24px;
-    }
-    &__price {
-      color: $blue;
-      font-size: 26px;
-      margin-bottom: 32px;
-      text-align: center;
-      span {
-        font-weight: 900;
-      }
     }
     &:not(.school-plan--proposal) {
       background-color: $white;
@@ -1450,7 +1584,7 @@ body .swiper-button {
   }
 }
 
-.enter-school {
+.education-cost {
   &__top {
     display: flex;
     align-items: center;
@@ -1471,8 +1605,72 @@ body .swiper-button {
   }
 }
 
-// Additional Opps
+// Enter School
+.circle {
+  position: relative;
+  display: inline-flex;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 4px solid $accent;
+  &::after {
+    position: absolute;
+    content: '';
+    top: 50%;
+    left: 50%;
+    width: 12px;
+    height: 12px;
+    background-color: $accent;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+.enter-school {
+  &__content {
+    display: flex;
+  }
+  &__left {
+    position: relative;
+    align-self: flex-start;
+    flex: 1;
+    margin-right: 140px;
+  }
+  &__right {
+    flex: 1;
+  }
+  &__image {
+    display: block;
+  }
+  .number-list {
+    margin-top: 32px;
+    margin-bottom: 64px;
+    li {
+      font-weight: 700;
+    }
+  }
+  &__tooltip {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    width: 100%;
+    max-width: 380px;
+    border-radius: 16px 16px 0px 16px;
+    padding: 40px 32px;
+    background-color: $white;
+  }
+  .circle {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+}
 
+// Additional Opps
+.simple-btn {
+  color: $blue;
+  font-size: 20px;
+  font-weight: 700;
+}
 .additional-opps {
   &__content {
   }
@@ -1488,10 +1686,44 @@ body .swiper-button {
       grid-template-columns: repeat(1, 1fr);
     }
     &__item {
+      position: relative;
+      z-index: 10;
       border-radius: 24px;
       border: 1px solid #c0c5c8;
-      background-color: $white;
       padding: 56px 32px;
+      &::before {
+        position: absolute;
+        content: '';
+        left: 0;
+        bottom: 0;
+        z-index: 1;
+        width: 100%;
+        height: 0;
+        border-radius: 24px;
+        background-color: $blue;
+        transition: height .25s ease;
+      }
+      &:hover {
+        &::before {
+          height: 100%;
+          transition: height .25s ease;
+        }
+        .additional-opps-list {
+          &__top {
+            h4 {
+              color: $white;
+            }
+          }
+          &__bottom {
+            .plan-price, .simple-btn {
+              color: $white;
+            }
+          }
+          &__text {
+            color: #fff;
+          }
+        }
+      }
     }
     &__top {
       display: flex;
@@ -1510,8 +1742,18 @@ body .swiper-button {
         border-radius: 8px;
       }
     }
+    &__bottom {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 32px;
+    }
     &__text {
       color: #879197;
+    }
+    &__top, &__middle, &__bottom {
+      position: relative;
+      z-index: 10;
     }
   }
 }
