--- a/theme/components/_app-checkbox.scss
+++ b/theme/components/_app-checkbox.scss
@@ -1,22 +1,38 @@
 .app-checkbox {
-  /*position: relative;*/
-  width: 40px;
-  height: 40px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   cursor: pointer;
   z-index: 2;
+  display: flex;
+  align-items: center;
+  &__container {
+    width: 40px;
+    height: 40px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__text {
+    font-size: 12px;
+    color: #879197;
+    margin-left: 12px;
+    transition: color .25s ease;
+  }
 
-  i {
+  svg {
     position: absolute;
-    font-size: 14px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 16px;
+    height: 16px;
+    left: 20px;
+    font-weight: 900;
     opacity: 1;
-    font-weight: 700;
     visibility: visible;
     color: #fff;
     z-index: 4;
     transition: opacity 0.25s ease;
+    fill: $white;
   }
 
   input {
@@ -33,7 +49,14 @@
     &:checked ~ i {
     }
   }
-
+  &:hover {
+    .app-checkbox {
+      &__text {
+        color: $dark;
+        transition: color .25s ease;
+      }
+    }
+  }
 }
 
 .checkbox-view {
@@ -42,7 +65,7 @@
   width: 24px;
   height: 24px;
   //border: 2px solid #ce58e7;
-  background-color: #E7E7E9;
+  background-color: #e7e7e9;
   display: inline-block;
   border-radius: 6px;
   transition: all linear 0.25s;
